--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ numpy==2.2.2
 openai==1.59.9
 packaging==24.2
 pandas==2.2.3
+pdf2image==1.17.0
 pillow==11.1.0
 preshed==3.0.9
 protobuf==5.29.3
@@ -51,6 +52,7 @@ pydantic==2.10.5
 pydantic_core==2.27.2
 pydeck==0.9.1
 Pygments==2.19.1
+PyMuPDF==1.25.2
 PyPDF2==3.0.1
 pytesseract==0.3.13
 python-dateutil==2.9.0.post0
