--- a/DockerFile
+++ b/DockerFile
@@ -1,26 +1,24 @@
 # Use an official Python runtime as a parent image
 FROM python:3.9-slim
 
-# Set the working directory in the container
+# Set working directory
 WORKDIR /app
 
-# Install system dependencies and Tesseract OCR
-RUN apt-get update && \
-    apt-get install -y \
+# Install system dependencies and Tesseract
+RUN apt-get update && apt-get install -y \
     tesseract-ocr \
+    libtesseract-dev \
     && apt-get clean
 
-# Copy the current directory contents into the container at /app
+# Copy project files
 COPY . /app
 
-# Install the Python dependencies
+# Install Python dependencies
+RUN pip install --no-cache-dir --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Make port 8501 available to the world outside this container
+# Expose the default Streamlit port
 EXPOSE 8501
 
-# Define environment variable for Tesseract path
-ENV TESSDATA_PREFIX=/usr/share/tesseract-ocr/4.00/tessdata
-
-# Run Streamlit app
-CMD ["streamlit", "run", "app.py"]
+# Run the Streamlit app
+CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.enableCORS=false"]
