--- a/DockerFile
+++ b/DockerFile
@@ -17,8 +17,8 @@ COPY . /app
 RUN pip install --no-cache-dir --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Expose the default Streamlit port
-EXPOSE 8501
+# Expose Render's required port
+EXPOSE 8080
 
-# Run the Streamlit app
-CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.enableCORS=false"]
+# Run the Streamlit app on port 8080
+CMD ["streamlit", "run", "app.py", "--server.port=8080", "--server.enableCORS=false"]
